cucumber changes